Fix overlay_uniform_color_clipped inheritance #104761

Merged
Clément Foucault merged 1 commits from bonj/blender:cleanup/overlay_uniform_color_clipped into main 2023-02-14 22:22:11 +01:00
Contributor

overlay_uniform_color_clipped was inheriting from overlay_depth_only, which doesn't make much sense.
I've changed it to inherit from overlay_uniform_color instead, which is consistent with other *_clipped variants of shaders.

overlay_uniform_color_clipped was inheriting from overlay_depth_only, which doesn't make much sense. I've changed it to inherit from overlay_uniform_color instead, which is consistent with other \*\_clipped variants of shaders.
Jorijn de Graaf added 1 commit 2023-02-14 22:20:48 +01:00
688583934e Fix overlay_uniform_color_clipped inheritance
I'm pretty sure it should be inheriting from this shader, as is consistent with all other *_clipped variants of shaders.
Jorijn de Graaf requested review from Clément Foucault 2023-02-14 22:21:00 +01:00
Clément Foucault merged commit dcc80748d3 into main 2023-02-14 22:22:11 +01:00
Jorijn de Graaf deleted branch cleanup/overlay_uniform_color_clipped 2023-02-14 22:22:35 +01:00
Sign in to join this conversation.
No reviewers
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
1 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#104761
No description provided.